--- a/index.html
+++ b/index.html
@@ -146,12 +146,16 @@
               <div class="row mt-6">
                 <div class="col-lg-6 col-12">
                   <div class="container">
-                    <iframe width=100% height="300" src="https://www.youtube.com/embed/qNzdAzCGfSk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <video width=100% height="auto" controls>
+                      <source src="assets/video/testimony-01.mp4" type="video/mp4">
+                    </video>
                   </div>
                 </div>
                 <div class="col-lg-6 col-12">
                   <div class="container">
-                    <iframe width=100% height="300" src="https://www.youtube.com/embed/pCVm1U6t-cc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <video width=100% height="auto" controls>
+                      <source src="assets/video/testimony-02.mp4" type="video/mp4">
+                    </video>
                   </div>
                 </div>
               </div>
@@ -266,10 +270,10 @@
                     <div class="col-lg-3 col-6">
                       <p><b class="text-white">Follow us</b></p>
                           <div class="social d-flex">
-                              <a class="mx-2" href="#!"><img src="assets/img/linkedin.svg" /></a>
-                              <a class="mx-2" href="#!"><img src="assets/img/facebook.svg" /></a>
-                              <a class="mx-2" href="#!"><img src="assets/img/twitter.svg" /></a>
-                              <a class="mx-2" href="#!"><img src="assets/img/instagram.svg" /></a>
+                              <a class="mx-2" href="https://www.linkedin.com/company/lantostechnologies/" target="_blank"><img src="assets/img/linkedin.svg" /></a>
+                              <a class="mx-2" href="https://www.facebook.com/lantostechnologies/" target="_blank"><img src="assets/img/facebook.svg" /></a>
+                              <a class="mx-2" href="https://twitter.com/lantostech" target="_blank"><img src="assets/img/twitter.svg" /></a>
+                              <a class="mx-2" href="https://www.instagram.com/lantostechnologies/" target="_blank"><img src="assets/img/instagram.svg" /></a>
                           </div>
                     </div>
                 </div>
