--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                   <!-- <img src="assets/img/logo-lantos.svg" height=""/> -->
                 </a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -41,8 +40,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
-                <div class="">
-                    <h1 class="">Break the mold</h1>
+                <div class="container-txt">
+                    <h1>Break the mold</h1>
                     <h2 class="text-white mb-3">
                       <img class="mr-2" src="assets/img/check-icon.svg" />
                       Make the right Impression
@@ -60,7 +59,7 @@
             </div>
         </header>
         <!-- About-->
-        <section class="about-section text-center" id="about">
+        <section class="about-section" id="about">
             <div class="container">
               <h2 class="text-white mb-4"><b>How it works</b></h2>
               <hr class="bg-white" />
@@ -75,14 +74,14 @@
                         <p>The disposable membrane is designed for single-patient use, which ensures maximum hygiene and patient safety during the process.</p>
                     </div>
                 </div>
-                <a class="btn btn-primary js-scroll-trigger mt-4" href="#about">Download a Hearing Review article</a>
+                <a class="btn btn-primary js-scroll-trigger mt-4 btn-gradient" href="#about">Download a Hearing Review article</a>
                 <div class="container mt-5">
                   <video width=100% height="auto" controls>
                     <source src="assets/video/membrane-video.mp4" type="video/mp4">
                   </video>
                 </div>
-                <h3 class="text-white mt-6 mb-5">Quality guaranty</h3>
-                <div class="row">
+                <h3 class="text-white mt-6 mb-5 mobile-no">Quality guaranty</h3>
+                <div class="row text-center">
                   <div class="col-lg-4 col-6 mb-4">
                     <img height="100" src="assets/img/quality-01.svg"/>
                     <p class="text-white">
@@ -122,6 +121,7 @@
                 </div>
             </div>
         </section>
+        <img class="divider-mobile" src="assets/img/divider-mobile-1.svg" />
         <!-- Projects-->
         <section class="why-section" id="why-lantos">
             <div class="container text-center">
@@ -130,20 +130,20 @@
               <div class="row">
                 <div class="col-lg-4 col-12 p-5">
                   <img src="assets/img/why-01.svg"/>
-                  <p class="mt-4">Accurate deep ear scans without the risk or discomfort of an old fashioned earmold impression.</p>
+                  <p class="mt-4">Accurate deep ear scans <b>without the risk or discomfort</b> of an old fashioned earmold impression.</p>
                 </div>
                 <div class="col-lg-4 col-12 p-5">
                   <img src="assets/img/why-02.svg"/>
-                  <p class="mt-4">Fast, seamless product delivered through a complete digital workflow.</p>
+                  <p class="mt-4">Fast, seamless product delivered <b>through a complete digital workflow.</b></p>
                 </div>
                 <div class="col-lg-4 col-12 p-5">
                   <img src="assets/img/why-03.svg"/>
-                  <p class="mt-4">Additional custom product orders obtained without an additional office visit.</p>
+                  <p class="mt-4"><b>Additional custom product</b> orders obtained without an additional office visit.</p>
                 </div>
               </div>
               <hr class="bg-black" />
               <h3 class="mt-5 text-orange">Testimonials</h3>
-              <div class="row mt-6">
+              <div class="row mt-6 mobile-no">
                 <div class="col-lg-6 col-12">
                   <div class="container">
                     <video width=100% height="auto" controls>
@@ -159,9 +159,22 @@
                   </div>
                 </div>
               </div>
+              <div class="single-item mt-4 mobile">
+                <div class="container text-center pb-5">
+                  <video width=100% height="auto" controls>
+                    <source src="assets/video/testimony-01.mp4" type="video/mp4">
+                  </video>
+                </div>
+                <div class="container text-center pb-5">
+                  <video width=100% height="auto" controls>
+                    <source src="assets/video/testimony-02.mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
             </div>
         </section>
         <!-- Signup-->
+        <img class="divider-mobile" src="assets/img/divider-mobile-2.svg" />
         <section class="team-section" id="team">
             <div class="container text-center">
               <h2 class="text-white"><b>Leadership team</b></h2>
@@ -172,7 +185,7 @@
                   </p>
                 </div>
               </div>
-              <div class="multiple-items mt-4">
+              <div class="responsive mt-4">
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-paul.png"/>
                   <h5 class="text-white"><b>Paul Harkness</b></h5>
@@ -212,6 +225,7 @@
               </div>
             </div>
         </section>
+        <img class="divider-mobile" src="assets/img/divider-mobile-3.svg" />
         <section class="contact-section" id="contact">
           <div class="container">
             <h2 class="text-center text-orange"><b>Want to learn more?</b></h2>
@@ -239,7 +253,7 @@
                     <textarea class="form-control" id="inputMessage" rows="3" placeholder="Message"></textarea>
                   </div>
                   <div class="form-group mt-4 text-center">
-                    <button type="submit" class="btn btn-primary align-center mt-4 pl-5 pr-5">Send</button>
+                    <button type="submit" class="btn btn-primary align-center mt-4 pl-5 pr-5 btn-gradient">Send</button>
                   </div>
                 </form>
               </div>
@@ -250,7 +264,7 @@
         <section class="contact-section bg-black">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 col-6">
+                    <div class="col-lg-3 col-12">
                       <img src="assets/img/logo-lantos-white.svg" />
                     </div>
                     <div class="col-lg-3 col-6">
@@ -267,7 +281,8 @@
                       <p class="text-white-50">Derry, NH 03038</p>
                       <p class="text-white-50">781 443 7633</p>
                     </div>
-                    <div class="col-lg-3 col-6">
+                    <div class="divider-white"></div>
+                    <div class="col-lg-3 col-12">
                       <p><b class="text-white">Follow us</b></p>
                           <div class="social d-flex">
                               <a class="mx-2" href="https://www.linkedin.com/company/lantostechnologies/" target="_blank"><img src="assets/img/linkedin.svg" /></a>
@@ -276,6 +291,7 @@
                               <a class="mx-2" href="https://www.instagram.com/lantostechnologies/" target="_blank"><img src="assets/img/instagram.svg" /></a>
                           </div>
                     </div>
+                    <div class="divider-white"></div>
                 </div>
             </div>
         </section>
@@ -291,11 +307,25 @@
         <script type="text/javascript" src="slick/slick.min.js"></script>
         <script>
         $(document).ready(function(){
-          $('.multiple-items').slick({
+          $('.responsive').slick({
+            dots: true,
+            infinite: true,
+            slidesToShow: 3,
+            slidesToScroll: 3,
+            responsive: [
+              {
+                breakpoint: 600,
+                settings: {
+                  slidesToShow: 1,
+                  slidesToScroll: 1
+                }
+              }
+            ]
+          });
+          $('.single-item').slick({
           dots: true,
           infinite: true,
-          slidesToShow: 3,
-          slidesToScroll: 3
+          arrows: true,
           });
         });
         </script>
