--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <!-- Slick Carousel-->
@@ -54,7 +54,7 @@
                       <img class="mr-2" src="assets/img/check-icon.svg" />
                       Elevate your audiology practice
                     </h2>
-                    <a class="btn btn-primary js-scroll-trigger mt-5" href="#about">Schedule a live demo</a>
+                    <a class="btn btn-primary js-scroll-trigger mt-5" href="mailto:info@lantostechnologies.com;cjhoelzel@lantostechnologies.com;PHarkness@lantostechnologies.com">Schedule a live demo</a>
                 </div>
             </div>
         </header>
@@ -62,16 +62,10 @@
         <section class="about-section" id="about">
             <div class="container">
               <h2 class="text-white mb-4"><b>How it works</b></h2>
-              <hr class="bg-white" />
-                <div class="row mt-5 text-white text-left">
-                    <div class="col-lg-6 col-12">
-                        <b>Lantos has modernized, streamlined and elevated the process for obtaining ear “impressions” and creating personalized hearing products.</b>
-                        <p>The Lantos System uses patented technology to create a precise 3D digital rendering of the unique geometry of the ear, from the outer ear through the The Lantos Membrane, which mounts onto the tip of the Lantos Scanner, is inserted into the ear canal where it quickly and safely</p>
-                    </div>
-                    <div class="col-lg-6">
-                        <p>inflates until it conforms to the patient’s unique ear contours. The interior of the inflated membrane provides a uniform surface and controlled environment for scanning; enabling the rapid capture of over 1,000,000 data points per ear.
-                        </p>
-                        <p>The disposable membrane is designed for single-patient use, which ensures maximum hygiene and patient safety during the process.</p>
+              <div class="hr-divider-white mx-auto"></div>
+                <div class="row mt-5 text-white">
+                    <div class="col-lg-8 col-12 mx-auto">
+                        <p>The Lantos Ear Scanning System uses patented technology to map the unique, 3D geometry of the ear. The Lantos membrane, which protects the camera and the client’s ear canal, is placed into the ear where it gently inflates and conforms to the curves of the ear. This controlled environment inside of the membrane, free of wax and debris, facilitates <b>the accurate capture of over one million data points.</b> The single-use membrane ensures maximum safety and hygiene while delivering a deep, precise ear scan that can be used to make any custom-fit earpiece.</p>
                     </div>
                 </div>
                 <a class="btn btn-primary js-scroll-trigger mt-4 btn-gradient" href="#about">Download a Hearing Review article</a>
@@ -80,53 +74,53 @@
                     <source src="assets/video/membrane-video.mp4" type="video/mp4">
                   </video>
                 </div>
-                <h3 class="text-white mt-6 mb-5 mobile-no">Quality guaranty</h3>
-                <div class="row text-center">
+                <div class="row text-center mt-5">
                   <div class="col-lg-4 col-6 mb-4">
                     <img height="100" src="assets/img/quality-01.svg"/>
-                    <p class="text-white">
+                    <p class="text-white medium">
                       Membrane-based<br />technology
                     </p>
                   </div>
                   <div class="col-lg-4 col-6 mb-4">
                     <img height="100" src="assets/img/quality-02.svg"/>
-                    <p class="text-white">
+                    <p class="text-white medium">
                       1,000,000+<br />data points per ear
                     </p>
                   </div>
                   <div class="col-lg-4 col-6 mb-4">
                     <img height="100" src="assets/img/quality-03.svg"/>
-                    <p class="text-white">
+                    <p class="text-white medium">
                       Developed<br />at MIT
                     </p>
                   </div>
                   <div class="col-lg-4 col-6 mb-4">
                     <img height="100" src="assets/img/quality-04.svg"/>
-                    <p class="text-white">
+                    <p class="text-white medium">
                     FDA 510K<br />cleared
                     </p>
                   </div>
                   <div class="col-lg-4 col-6 mb-4">
                     <img height="100" src="assets/img/quality-05.svg"/>
-                    <p class="text-white">
+                    <p class="text-white medium">
                       Protected by<br />70+ patents
                     </p>
                   </div>
                   <div class="col-lg-4 col-6 mb-4">
                     <img height="100" src="assets/img/quality-06.svg"/>
-                    <p class="text-white">
+                    <p class="text-white medium">
                       Digital work flow<br />efficiency and speed
                     </p>
                   </div>
                 </div>
             </div>
         </section>
-        <img class="divider-mobile" src="assets/img/divider-mobile-1.svg" />
+        <img class="divider-mobile" src="assets/img/divider-mobile-1.svg" style="margin-top:-10vw;" />
+        <img class="divider-desktop" src="assets/img/divider-1.svg" style="margin-top:-6vw;"/>
         <!-- Projects-->
         <section class="why-section" id="why-lantos">
             <div class="container text-center">
-              <h2 class="mb-4 text-orange"><b>Why Lantos</b></h2>
-              <h5>Better experiences, better outcomes</h5>
+              <h2 class="mb-4 text-mint"><b>Better experiences, better outcomes</b></h2>
+              <div class="hr-divider-grey mx-auto"></div>
               <div class="row">
                 <div class="col-lg-4 col-12 p-5">
                   <img src="assets/img/why-01.svg"/>
@@ -141,8 +135,8 @@
                   <p class="mt-4"><b>Additional custom product</b> orders obtained without an additional office visit.</p>
                 </div>
               </div>
-              <hr class="bg-black" />
-              <h3 class="mt-5 text-orange">Testimonials</h3>
+              <h3 class="mt-5">Testimonials</h3>
+              <div class="hr-divider-grey mx-auto"></div>
               <div class="row mt-6 mobile-no">
                 <div class="col-lg-6 col-12">
                   <div class="container">
@@ -174,14 +168,16 @@
             </div>
         </section>
         <!-- Signup-->
-        <img class="divider-mobile" src="assets/img/divider-mobile-2.svg" />
+        <img class="divider-desktop" src="assets/img/divider-2.svg" style="margin-bottom:-.30vw;"/>
+        <img class="divider-mobile" src="assets/img/divider-mobile-2.svg" style="margin-bottom:-.5vw;" />
         <section class="team-section" id="team">
             <div class="container text-center">
               <h2 class="text-white"><b>Leadership team</b></h2>
+              <div class="hr-divider-white mx-auto"></div>
               <div class="row mt-4">
                 <div class="col-lg-7 col-10 mx-auto">
                   <p class="text-white">
-                    The Lantos leadership team is deeply experienced in and focused on hearing healthcare and manufacturing excellence with the goal of enabling personalized hearing solutions
+                    The Lantos <b>leadership team</b> is deeply experienced in and focused on <b>hearing healthcare and manufacturing excellence</b> with the goal of enabling personalized hearing solutions.
                   </p>
                 </div>
               </div>
@@ -199,36 +195,39 @@
                   <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
+                  <img class="img-team" src="assets/img/team-carrie.png"/>
+                  <h5 class="text-white"><b>Carrie Jo Hoelzel</b></h5>
+                  <h5 class="text-white">Sr. Director, Customer Experience</h5>
+                  <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                </div>
+                <div class="container text-center pb-5">
+                  <img class="img-team" src="assets/img/team-paul.png"/>
+                  <h5 class="text-white"><b>Brian Fligor, PhD</b></h5>
+                  <h5 class="text-white">Founding Clinical-Strategic Advisor</h5>
+                  <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                </div>
+                <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-susan.png"/>
-                  <h5 class="text-white"><b>Susan Whichard</b></h5>
+                  <h5 class="text-white"><b>Susan Richard</b></h5>
                   <h5 class="text-white">Founding Strategic Advisor</h5>
                   <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
-                  <img class="img-team" src="assets/img/team-paul.png"/>
-                  <h5 class="text-white"><b>Paul Harkness</b></h5>
-                  <h5 class="text-white">Chief Executive Officer</h5>
+                  <img class="img-team" src="assets/img/team-erin.png"/>
+                  <h5 class="text-white"><b>Erin Henry, AuD</b></h5>
+                  <h5 class="text-white">Sr. Director, Product Management</h5>
                   <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
-                <div class="container text-center pb-5">
-                  <img class="img-team" src="assets/img/team-paul.png"/>
-                  <h5 class="text-white"><b>Paul Harkness</b></h5>
-                  <h5 class="text-white">Chief Executive Officer</h5>
-                  <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
-                </div>
-                <div class="container text-center pb-5">
-                  <img class="img-team" src="assets/img/team-paul.png"/>
-                  <h5 class="text-white"><b>Paul Harkness</b></h5>
-                  <h5 class="text-white">Chief Executive Officer</h5>
-                  <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
-                </div>
+
               </div>
             </div>
         </section>
-        <img class="divider-mobile" src="assets/img/divider-mobile-3.svg" />
+        <img class="divider-desktop" src="assets/img/divider-3.svg" style="margin-top:-.25vw;" />
+        <img class="divider-mobile" src="assets/img/divider-mobile-3.svg" style="margin-top:-4.3vw;"/>
         <section class="contact-section" id="contact">
-          <div class="container">
-            <h2 class="text-center text-orange"><b>Want to learn more?</b></h2>
+          <div class="container mt-5 mb-5">
+            <h2 class="text-center text-mint"><b>Want to learn more?</b></h2>
+            <div class="hr-divider-grey mx-auto"></div>
             <h5 class="text-center">Schedule a live demo.</h5>
             <div class="row">
               <div class="col-lg-8 col-12 mx-auto mt-5">
@@ -263,23 +262,23 @@
         <!-- Contact-->
         <section class="contact-section bg-black">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-12">
+                <div class="row align-middle">
+                    <div class="col-lg-3 col-12 mb-4" style="display:inline-flex">
                       <img src="assets/img/logo-lantos-white.svg" />
                     </div>
                     <div class="col-lg-3 col-6">
                       <p><b class="text-white">Sitemap</b></p>
-                      <p class="text-white">How it works </p>
-                      <p class="text-white">About us</p>
-                      <p class="text-white">Why Lantos</p>
-                      <p class="text-white">Contact</p>
+                      <a href="#about" class="text-white js-scroll-trigger"><p class="mb-05">How it works</p></a>
+                      <a href="#why-lantos" class="text-white js-scroll-trigger"><p class="mb-05">About us</p></a>
+                      <a href="#team" class="text-white js-scroll-trigger"><p class="mb-05">Why Lantos</p></a>
+                      <a href="#contact" class="text-white js-scroll-trigger"><p class="mb-05">Contact</p></a>
                     </div>
                     <div class="col-lg-3 col-6">
                       <p><b class="text-white">Contact us</b></p>
-                      <p class="text-white-50">34 Route 111</p>
-                      <p class="text-white-50">Suite 101</p>
-                      <p class="text-white-50">Derry, NH 03038</p>
-                      <p class="text-white-50">781 443 7633</p>
+                      <p class="text-white-50 mb-05">34 Route 111</p>
+                      <p class="text-white-50 mb-05">Suite 101</p>
+                      <p class="text-white-50 mb-05">Derry, NH 03038</p>
+                      <p class="text-white-50 mb-05">781 443 7633</p>
                     </div>
                     <div class="divider-white"></div>
                     <div class="col-lg-3 col-12">
@@ -309,6 +308,7 @@
         $(document).ready(function(){
           $('.responsive').slick({
             dots: true,
+            arrows: false,
             infinite: true,
             slidesToShow: 3,
             slidesToScroll: 3,
@@ -325,7 +325,7 @@
           $('.single-item').slick({
           dots: true,
           infinite: true,
-          arrows: true,
+          arrows: false,
           });
         });
         </script>
