--- a/index.html
+++ b/index.html
@@ -231,25 +231,25 @@
             <h5 class="text-center">Schedule a live demo.</h5>
             <div class="row">
               <div class="col-lg-8 col-12 mx-auto mt-5">
-                <form>
+                <form id="send_comment">
                   <div class="form-row">
                     <div class="form-group col-md-6">
-                      <input type="text" class="form-control" id="inputName" placeholder="First Name">
+                      <input type="text" class="form-control" id="inputName" name="inputName" placeholder="First Name">
                     </div>
                     <div class="form-group col-md-6">
-                      <input type="text" class="form-control" id="inputLast" placeholder="Last Name">
+                      <input type="text" class="form-control" id="inputLast" name="inputLast" placeholder="Last Name">
                     </div>
                   </div>
                   <div class="form-row mt-4">
                     <div class="form-group col-md-6">
-                      <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                      <input type="email" class="form-control" id="inputEmail" name="inputEmail" placeholder="Email">
                     </div>
                     <div class="form-group col-md-6">
-                      <input type="number" class="form-control" id="inputPhone" placeholder="Phone Number">
+                      <input type="number" class="form-control" id="inputPhone" name="inputPhone" placeholder="Phone Number">
                     </div>
                   </div>
                   <div class="form-group mt-4">
-                    <textarea class="form-control" id="inputMessage" rows="3" placeholder="Message"></textarea>
+                    <textarea class="form-control" id="inputMessage" name="inputMessage" rows="3" placeholder="Message"></textarea>
                   </div>
                   <div class="form-group mt-4 text-center">
                     <button type="submit" class="btn btn-primary align-center mt-4 pl-5 pr-5 btn-gradient">Send</button>
@@ -301,6 +301,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
         <script type="text/javascript" src="slick/slick.min.js"></script>
