--- a/index.html
+++ b/index.html
@@ -303,6 +303,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
         <!-- Core theme JS-->
+        <script src="https://smtpjs.com/v3/smtp.js">
+        </script>
         <script src="js/scripts.js"></script>
         <script type="text/javascript" src="slick/slick.min.js"></script>
         <script>
