--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-            <div class="container mt-3">
+            <div class="container ">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">
                   <!-- <img src="assets/img/logo-lantos.svg" height=""/> -->
                 </a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
+                    <img src="assets/img/fa-bars.svg" />
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
@@ -39,21 +39,21 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container d-flex h-100 align-items-center">
+            <div class="container d-flex h-90 align-items-center">
                 <div class="container-txt">
                     <h1>Break the mold</h1>
-                    <h2 class="text-white mb-3">
-                      <img class="mr-2" src="assets/img/check-icon.svg" />
-                      Make the right Impression
-                    </h2>
-                    <h2 class="text-white mb-3">
-                      <img class="mr-2" src="assets/img/check-icon.svg" />
-                      Deliver personalised hearing to your clients
-                    </h2>
-                    <h2 class="text-white mb-3">
-                      <img class="mr-2" src="assets/img/check-icon.svg" />
-                      Elevate your audiology practice
-                    </h2>
+                    <div class="row">
+                      <span class="pl-3"><img class="mr-2 img-p" src="assets/img/check-icon.svg" /></span>
+                      <h2 class="text-white mb-3">Make the right Impression</h2>
+                    </div>
+                    <div class="row">
+                      <span class="pl-3"><img class="mr-2 img-p" src="assets/img/check-icon.svg" /></span>
+                      <h2 class="text-white mb-3">Deliver personalised hearing to your clients</h2>
+                    </div>
+                    <div class="row">
+                      <span class="pl-3"><img class="mr-2 img-p" src="assets/img/check-icon.svg" /></span>
+                      <h2 class="text-white mb-3">Elevate your audiology practice</h2>
+                    </div>
                     <a class="btn btn-primary js-scroll-trigger mt-5" href="mailto:info@lantostechnologies.com;cjhoelzel@lantostechnologies.com;PHarkness@lantostechnologies.com">Schedule a live demo</a>
                 </div>
             </div>
@@ -62,7 +62,7 @@
         <section class="about-section" id="about">
             <div class="container">
               <h2 class="text-white mb-4"><b>How it works</b></h2>
-              <div class="hr-divider-white mx-auto"></div>
+              <div class="hr-divider-white"></div>
                 <div class="row mt-5 text-white">
                     <div class="col-lg-8 col-12 mx-auto">
                         <p>The Lantos Ear Scanning System uses patented technology to map the unique, 3D geometry of the ear. The Lantos membrane, which protects the camera and the client’s ear canal, is placed into the ear where it gently inflates and conforms to the curves of the ear. This controlled environment inside of the membrane, free of wax and debris, facilitates <b>the accurate capture of over one million data points.</b> The single-use membrane ensures maximum safety and hygiene while delivering a deep, precise ear scan that can be used to make any custom-fit earpiece.</p>
@@ -70,44 +70,44 @@
                 </div>
                 <a class="btn btn-primary js-scroll-trigger mt-4 btn-gradient" href="#about">Download a Hearing Review article</a>
                 <div class="container mt-5">
-                  <video width=100% height="auto" controls>
+                  <video width=100% height="auto" controls poster="assets/img/poster-video.png">
                     <source src="assets/video/membrane-video.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="row text-center mt-5">
-                  <div class="col-lg-4 col-6 mb-4">
-                    <img height="100" src="assets/img/quality-01.svg"/>
-                    <p class="text-white medium">
+                  <div class="col-lg-4 col-6 mb-4 p-0">
+                    <img class="img-quality" src="assets/img/quality-01.svg"/>
+                    <p class="text-white medium txt-09">
                       Membrane-based<br />technology
                     </p>
                   </div>
-                  <div class="col-lg-4 col-6 mb-4">
-                    <img height="100" src="assets/img/quality-02.svg"/>
-                    <p class="text-white medium">
+                  <div class="col-lg-4 col-6 mb-4 p-0">
+                    <img class="img-quality" src="assets/img/quality-02.svg"/>
+                    <p class="text-white medium txt-09">
                       1,000,000+<br />data points per ear
                     </p>
                   </div>
-                  <div class="col-lg-4 col-6 mb-4">
-                    <img height="100" src="assets/img/quality-03.svg"/>
-                    <p class="text-white medium">
+                  <div class="col-lg-4 col-6 mb-4 p-0">
+                    <img class="img-quality" src="assets/img/quality-03.svg"/>
+                    <p class="text-white medium txt-09">
                       Developed<br />at MIT
                     </p>
                   </div>
-                  <div class="col-lg-4 col-6 mb-4">
-                    <img height="100" src="assets/img/quality-04.svg"/>
-                    <p class="text-white medium">
+                  <div class="col-lg-4 col-6 mb-4 p-0">
+                    <img class="img-quality" src="assets/img/quality-04.svg"/>
+                    <p class="text-white medium txt-09">
                     FDA 510K<br />cleared
                     </p>
                   </div>
-                  <div class="col-lg-4 col-6 mb-4">
-                    <img height="100" src="assets/img/quality-05.svg"/>
-                    <p class="text-white medium">
+                  <div class="col-lg-4 col-6 mb-4 p-0">
+                    <img class="img-quality" src="assets/img/quality-05.svg"/>
+                    <p class="text-white medium txt-09">
                       Protected by<br />70+ patents
                     </p>
                   </div>
-                  <div class="col-lg-4 col-6 mb-4">
-                    <img height="100" src="assets/img/quality-06.svg"/>
-                    <p class="text-white medium">
+                  <div class="col-lg-4 col-6 mb-4 p-0">
+                    <img class="img-quality" src="assets/img/quality-06.svg"/>
+                    <p class="text-white medium txt-09">
                       Digital work flow<br />efficiency and speed
                     </p>
                   </div>
@@ -122,17 +122,17 @@
               <h2 class="mb-4 text-mint"><b>Better experiences, better outcomes</b></h2>
               <div class="hr-divider-grey mx-auto"></div>
               <div class="row">
-                <div class="col-lg-4 col-12 p-5">
+                <div class="col-lg-4 col-12">
                   <img src="assets/img/why-01.svg"/>
-                  <p class="mt-4">Accurate deep ear scans <b>without the risk or discomfort</b> of an old fashioned earmold impression.</p>
+                  <p>Accurate deep ear scans <b>without the risk or discomfort</b> of an old fashioned earmold impression.</p>
                 </div>
-                <div class="col-lg-4 col-12 p-5">
+                <div class="col-lg-4 col-12">
                   <img src="assets/img/why-02.svg"/>
-                  <p class="mt-4">Fast, seamless product delivered <b>through a complete digital workflow.</b></p>
+                  <p>Fast, seamless product delivered <b>through a complete digital workflow.</b></p>
                 </div>
-                <div class="col-lg-4 col-12 p-5">
+                <div class="col-lg-4 col-12">
                   <img src="assets/img/why-03.svg"/>
-                  <p class="mt-4"><b>Additional custom product</b> orders obtained without an additional office visit.</p>
+                  <p><b>Additional custom product</b> orders obtained without an additional office visit.</p>
                 </div>
               </div>
               <h3 class="mt-5">Testimonials</h3>
@@ -140,37 +140,43 @@
               <div class="row mt-6 mobile-no">
                 <div class="col-lg-6 col-12">
                   <div class="container">
-                    <video width=100% height="auto" controls>
-                      <source src="assets/video/testimony-01.mp4" type="video/mp4">
+                    <video width=100% height="auto" controls poster="assets/img/poster-video-3.png">
+                      <source src="assets/video/testimony-02.mp4" type="video/mp4">
                     </video>
                   </div>
                 </div>
                 <div class="col-lg-6 col-12">
                   <div class="container">
-                    <video width=100% height="auto" controls>
-                      <source src="assets/video/testimony-02.mp4" type="video/mp4">
+                    <video width=100% height="auto" controls poster="assets/img/poster-video-2.png">
+                      <source src="assets/video/testimony-01.mp4" type="video/mp4">
                     </video>
                   </div>
                 </div>
               </div>
-              <div class="single-item mt-4 mobile">
-                <div class="container text-center pb-5">
-                  <video width=100% height="auto" controls>
+              <div class="multiple-items mt-4 mobile">
+                <div class="container text-left pb-5">
+                  <video width=100% height="auto" controls poster="assets/img/poster-video-2.png">
                     <source src="assets/video/testimony-01.mp4" type="video/mp4">
                   </video>
+                  <h5><b>Hear from a Consumer</b></h5>
                 </div>
-                <div class="container text-center pb-5">
-                  <video width=100% height="auto" controls>
+                <div class="container text-left pb-5">
+                  <video width=100% height="auto" controls poster="assets/img/poster-video-3.png">
                     <source src="assets/video/testimony-02.mp4" type="video/mp4">
                   </video>
+                  <h5><b>Hear from an Audiologist</b></h5>
                 </div>
               </div>
             </div>
         </section>
         <!-- Signup-->
-        <img class="divider-desktop" src="assets/img/divider-2.svg" style="margin-bottom:-.30vw;"/>
+
         <img class="divider-mobile" src="assets/img/divider-mobile-2.svg" style="margin-bottom:-.5vw;" />
         <section class="team-section" id="team">
+        <img class="" src="assets/img/divider-2.svg" style="margin-top:-11.65vw;"/>
+        <div class="container-fluid" style="position:relative;">
+          <img class="back-resource-team" src="assets/img/back-resource.svg"/>
+        </div>
             <div class="container text-center">
               <h2 class="text-white"><b>Leadership team</b></h2>
               <div class="hr-divider-white mx-auto"></div>
@@ -181,30 +187,30 @@
                   </p>
                 </div>
               </div>
-              <div class="responsive mt-4">
+              <div class="responsive mt-4" id="slick-team">
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-paul.png"/>
                   <h5 class="text-white"><b>Paul Harkness</b></h5>
                   <h5 class="text-white">Chief Executive Officer</h5>
-                  <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a href="https://www.linkedin.com/in/pauleharkness/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-joe.png"/>
                   <h5 class="text-white"><b>Joe St. Cyr</b></h5>
                   <h5 class="text-white">Chief Technical Officer</h5>
-                  <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a href="https://www.linkedin.com/in/joe-st-cyr-b60a161/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-carrie.png"/>
                   <h5 class="text-white"><b>Carrie Jo Hoelzel</b></h5>
                   <h5 class="text-white">Sr. Director, Customer Experience</h5>
-                  <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a href="https://www.linkedin.com/in/carriejo-h-815a402a/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
-                  <img class="img-team" src="assets/img/team-paul.png"/>
+                  <img class="img-team" src="assets/img/team-brian.png"/>
                   <h5 class="text-white"><b>Brian Fligor, PhD</b></h5>
                   <h5 class="text-white">Founding Clinical-Strategic Advisor</h5>
-                  <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a href="https://www.linkedin.com/in/brianfligor/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-susan.png"/>
@@ -216,7 +222,7 @@
                   <img class="img-team" src="assets/img/team-erin.png"/>
                   <h5 class="text-white"><b>Erin Henry, AuD</b></h5>
                   <h5 class="text-white">Sr. Director, Product Management</h5>
-                  <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a href="https://www.linkedin.com/in/erinhenry24/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
 
               </div>
@@ -240,7 +246,7 @@
                       <input type="text" class="form-control" id="inputLast" name="inputLast" placeholder="Last Name">
                     </div>
                   </div>
-                  <div class="form-row mt-4">
+                  <div class="form-row">
                     <div class="form-group col-md-6">
                       <input type="email" class="form-control" id="inputEmail" name="inputEmail" placeholder="Email">
                     </div>
@@ -248,10 +254,10 @@
                       <input type="number" class="form-control" id="inputPhone" name="inputPhone" placeholder="Phone Number">
                     </div>
                   </div>
-                  <div class="form-group mt-4">
+                  <div class="form-group">
                     <textarea class="form-control" id="inputMessage" name="inputMessage" rows="3" placeholder="Message"></textarea>
                   </div>
-                  <div class="form-group mt-4 text-center">
+                  <div class="form-group text-center">
                     <button type="submit" class="btn btn-primary align-center mt-4 pl-5 pr-5 btn-gradient">Send</button>
                   </div>
                 </form>
@@ -311,7 +317,7 @@
         $(document).ready(function(){
           $('.responsive').slick({
             dots: true,
-            arrows: false,
+            arrows: true,
             infinite: true,
             slidesToShow: 3,
             slidesToScroll: 3,
@@ -325,10 +331,12 @@
               }
             ]
           });
-          $('.single-item').slick({
+          $('.multiple-items').slick({
           dots: true,
           infinite: true,
           arrows: false,
+          slidesToShow: 1.03,
+          slidesToScroll: 1
           });
         });
         </script>
