--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
             <div class="container d-flex h-90 align-items-center">
                 <div class="container-txt">
                     <h1>Break the mold</h1>
-                    <div class="row">
+                    <div class="row no-flex-wrap">
                       <span class="pl-3"><img class="mr-2 img-p" src="assets/img/check-icon.svg" /></span>
                       <h2 class="text-white mb-3">Make the right Impression</h2>
                     </div>
-                    <div class="row">
+                    <div class="row no-flex-wrap">
                       <span class="pl-3"><img class="mr-2 img-p" src="assets/img/check-icon.svg" /></span>
                       <h2 class="text-white mb-3">Deliver personalised hearing to your clients</h2>
                     </div>
-                    <div class="row">
+                    <div class="row no-flex-wrap">
                       <span class="pl-3"><img class="mr-2 img-p" src="assets/img/check-icon.svg" /></span>
                       <h2 class="text-white mb-3">Elevate your audiology practice</h2>
                     </div>
