--- a/index.html
+++ b/index.html
@@ -192,37 +192,37 @@
                   <img class="img-team" src="assets/img/team-paul.png"/>
                   <h5 class="text-white"><b>Paul Harkness</b></h5>
                   <h5 class="text-white">Chief Executive Officer</h5>
-                  <a href="https://www.linkedin.com/in/pauleharkness/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/pauleharkness/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-joe.png"/>
                   <h5 class="text-white"><b>Joe St. Cyr</b></h5>
                   <h5 class="text-white">Chief Technical Officer</h5>
-                  <a href="https://www.linkedin.com/in/joe-st-cyr-b60a161/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/joe-st-cyr-b60a161/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-carrie.png"/>
                   <h5 class="text-white"><b>Carrie Jo Hoelzel</b></h5>
                   <h5 class="text-white">Sr. Director, Customer Experience</h5>
-                  <a href="https://www.linkedin.com/in/carriejo-h-815a402a/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/carriejo-h-815a402a/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-brian.png"/>
                   <h5 class="text-white"><b>Brian Fligor, PhD</b></h5>
                   <h5 class="text-white">Founding Clinical-Strategic Advisor</h5>
-                  <a href="https://www.linkedin.com/in/brianfligor/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/brianfligor/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-susan.png"/>
                   <h5 class="text-white"><b>Susan Richard</b></h5>
                   <h5 class="text-white">Founding Strategic Advisor</h5>
-                  <a href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a target="_blank" href=""><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
                 <div class="container text-center pb-5">
                   <img class="img-team" src="assets/img/team-erin.png"/>
                   <h5 class="text-white"><b>Erin Henry, AuD</b></h5>
                   <h5 class="text-white">Sr. Director, Product Management</h5>
-                  <a href="https://www.linkedin.com/in/erinhenry24/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/erinhenry24/"><img class="btn-li" src="assets/img/btn-linkedin.svg" /></a>
                 </div>
 
               </div>
