--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">
                   <!-- <img src="assets/img/logo-lantos.svg" height=""/> -->
                 </a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <button id="open-menu" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <img src="assets/img/fa-bars.svg" />
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">How it works</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#why-lantos">Why Lantos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">About us</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </nav>
         <!-- Masthead-->
@@ -300,6 +300,42 @@
                 </div>
             </div>
         </section>
+
+        <div id="modal-menu" class="modal" tabindex="-1" role="dialog">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <div class="container">
+                  <div class="row">
+                    <img src="assets/img/logo-lantos-white.svg" />
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <img src="assets/img/close.svg" />
+                    </button>
+                  </div>
+                  <div class="row mt-5">
+                    <ul class="navbar-nav mx-auto text-center">
+                        <li class="nav-item"><a class="nav-link active js-scroll-trigger" href="#top">Home</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">How it works</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#why-lantos">Why Lantos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">About us</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                    </ul>
+                  </div>
+                </div>
+
+
+              </div>
+              <div class="modal-footer">
+                <div class="social mx-auto">
+                    <a class="mx-2" href="https://www.linkedin.com/company/lantos-technologies/" target="_blank"><img src="assets/img/linkedin.svg" /></a>
+                    <a class="mx-2" href="https://www.facebook.com/lantostechnologies/" target="_blank"><img src="assets/img/facebook.svg" /></a>
+                    <a class="mx-2" href="https://twitter.com/lantostech" target="_blank"><img src="assets/img/twitter.svg" /></a>
+                    <a class="mx-2" href="https://www.instagram.com/lantostechnologies/" target="_blank"><img src="assets/img/instagram.svg" /></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © 2021 Lantos. All Rights Reserved. Privacy Notice | Terms of Use</div></footer>
         <!-- Bootstrap core JS-->
