--- a/index.html
+++ b/index.html
@@ -22,19 +22,18 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container ">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                  <!-- <img src="assets/img/logo-lantos.svg" height=""/> -->
                 </a>
                 <button id="open-menu" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <img src="assets/img/fa-bars.svg" />
                 </button>
-                <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">How it works</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#why-lantos">Why Lantos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">About us</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
-                </div> -->
+                </div>
             </div>
         </nav>
         <!-- Masthead-->
@@ -314,7 +313,7 @@
                   </div>
                   <div class="row mt-5">
                     <ul class="navbar-nav mx-auto text-center">
-                        <li class="nav-item"><a class="nav-link active js-scroll-trigger" href="#top">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active js-scroll-trigger" href="#page-top">Home</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">How it works</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#why-lantos">Why Lantos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">About us</a></li>
